[workspace]
members = [
    "livox-sdk2-sys",
    "mid360-dora-types",
    "mid360-dora-driver",
    "examples/minimal-sink",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
arrow = "54.3.1"
dora-node-api = { version = "0.5.0", default-features = false }
eyre = "0.6.12"
futures = "0.3.32"
serde_json = "1.0.149"
serial_test = "3.4.0"
tempfile = "3.27.0"
